[tool.poetry]
name = "shadeorb"
version = "0.0.3"
description = "Package to control Shade ORB lights"
authors = ["Yngvi Thor Sigurjonsson <blitzkopf@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/blitzkopf/shadeorb"
repository = "https://github.com/blitzkopf/shadeorb"
keywords = ["shadeorb", "lights", "bleak", "bluetooth", "homeassistant"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Home Automation",
]
packages = [{ include = "shadeorb" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
bleak = "^0.22.1"
bleak-retry-connector = "^3.5.0"
bitstruct = "^8.19.0"
ruff = "0.9.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
